# bdimager

./: .gitignore  ARCHITECTURE.md  README.md  bd-config.toml  justfile  pyproject.toml
notes/: README.md  cycle-protocol.md  jj-tips.md  todo-backlog.md  todo.md
notes/chores/: chores-01.md
src/bdimager/: __init__.py  build.py  capture.py  devsafe.py  imgcfg.py  imglib.py  mk_test_image.py  write.py
tests/: test_build.py  test_core.py  test_devices.py
